<resources>
    <string name="app_name">Delivery</string>
    <string name="compraya">COMPRAYA</string>
    <string name="btnGoogle">Continua con google</string>
    <string name="btnFacebook">Continua con Facebook</string>
    <string name="btnRegistrate">Registrate gratis</string>
    <string name="btnInicia">Iniciar sesion</string>
    <string name="tvinicio">INICIO</string>
    <string name="tvregistro">REGISTRATE EN COMPRAYA</string>
    <string name="tvnombre">Nombre</string>
    <string name="tvremail">email</string>
    <string name="tvcontrasena">contraseña</string>
    <string name="tvinforegistro">rellena los 3 espacios para poder registrarte correctamente</string>
    <string name="btnRegistrar">Registrarse</string>

    <string name="tvcategoria">Categorias</string>
    <string name="btnIrLogin">Ir a Login</string>
    <string name="titulo_activity_maps">MapsActivity</string>
    <string name="title_activity_maps" />


</resources>